# docker_spark

./: Dockerfile  README.md  comandos  docker-compose.yml  start-spark.sh  your_script.py
app/: Dockerfile  docker-compose.yml  main.py  main_copy.py  pyproject.toml  requirements.txt
