[tool.poetry]
name = "fastapi-dash-pyspark-app"
version = "0.1.0"
description = "A web application using FastAPI, Dash, and PySpark."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
"uvicorn" = "^0.17.6"
dash = "^2.0.0"
"dash-bootstrap-components" = "^1.0.3"
pyspark = "^3.2.1"
pandas = "^1.3.5"
plotly = "^5.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
